--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="total_tracks">Кол-во треков</string>
     <string name="track_title">Пример Текста</string>
     <string name="back_btn">Назад</string>
+    <string name="time_start">0:00</string>
+    <string name="time_stop">2:56</string>
 </resources>
